--- a/style.css
+++ b/style.css
@@ -1,195 +1,21 @@
 header{
     grid-area: cab;
-  
-}
-aside{
-    grid-area: bra;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   
 }
 main{
     grid-area: pri;
-    
+}
+aside{
+    grid-area: sec;
 }
 footer{
     grid-area: rod;
-    
-}
-header{
-    text-align: center;
-    background-image: linear-gradient(to right, rgb(89, 255, 200, 0.4) , rgb(240, 151, 165, 0.4));
-    display: flex;
-    position: relative;
-}
-header li{
-    display: inline;
-    margin: 0 0 0 100px;
-}
-header a{
-    text-decoration:none; 
-    font-size: 1.5rem;
-    color: rgb(0, 0, 0);
-    background: rgb(233, 163, 209);
-    transition: 1s;
-}
-
-header, aside, main, footer{
-    background-color: rgba(225, 201, 228, 0.7);
 }
 body{
     display: grid;
-     grid-template-areas: 
-    "cab cab cab cab"
-    "bra pri pri pri"
+    grid-template-areas: 
+    "cab cab cab cab "
+    "sec pri pri pri"
     "rod rod rod rod";
-    grid-auto-columns: 200px auto;
-    grid-auto-rows: 100px auto 100px;
-}
-.caixa_mae{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    margin: 20px;
-}
-.card{
-    width: 300px;
-    height: 350px;
-    margin: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: pink;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 3px 6px 11px black;
-    transition: 3s;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: medium;
-}
-.card img{
-    width: 190px;
-    height: 150px;
-    align-items: center;
-    border-radius: 10px;
-}
-.card a{
-    display: block;
-    width: 100px;
-    height: 15px;
-    background-color: rgb(255, 111, 219);
-    border: black 2px solid;
-    text-align: center;
-    border-radius: 20px;
-    margin: 20px;
-    padding: 5px;
-}
-.card:hover{
-    background-color:rgb(117, 77, 83);
-    transition: 3s;
-
-}
-.fundo1{
-    background-image:url(imagem/fundo1.jpg);
-
-}
-.logo1{
-    width: 10%;
-    border-radius: 10px;
-    transition: 10s;
-}
-.logo:hover{
-    width: 15%;
-    border-radius: 20%;
-    transition: 3s;
-}
-
-nav{
-    margin-top: 1rem;
-    position:absolute;
-    right: 500px;
-}
-
-nav li{
-    display: inline;
-    margin: 100px;
-}
-nav a{
-    text-decoration: none; 
-    font-size: 1.5rem;
-    color: rgb(2, 2, 2,);
-    background: rgb(224, 174, 174);
-    transition: 1s;
-     
-}
-
-nav a:hover{ 
-    font-size: 1.1rem;
-    color: white; 
-    border: solid rgb(254, 254, 254); 
-    background: black; 
-}
-
-footer{
-    text-align: center;
-    background-image: linear-gradient(to right, rgb(89, 255, 200, 0.4) , rgb(240, 151, 165, 0.4));
-    display: flex;
-}
-footer li{
-    display: inline;
-    margin: 0 0 0 100px;
-}
-footer a{
-    text-decoration: none; 
-    font-size: 1.5rem;
-    color: rgb(2, 2, 2);
-    background: rgb(224, 174, 174);
-    transition: 1s;
-}
-footer a:hover{
-    font-size: 1.1rem;
-    color: white; 
-    border: solid rgb(0, 0, 0); 
-    background: black; 
-}
-
-main{
-    text-align: justify; 
-    background-color: rgba(231, 202, 248, 0.5);
-    margin: 2rem; 
-    padding: 2rem; 
-    color: rgb(0, 0, 0);
-    font-size:larger;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-.fundo{
-    width: 40%; 
-    float: right; 
-    margin: 1rem;
-}
-.figurino img{
-    border-radius: 15px;
-}
-.card2{
-width: 900px;
-height: 350px;
-margin: 10px;
-display:flexbox;
-align-items: center;
-justify-content: left;
-padding: 20px;
-border-radius: 10px;
-box-shadow: 3px 10px 11px black;
-transition: 3s;
-}
-.box{
-    display: flex;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.notas{
-    height: 180px;
-    width: 560px;
-    transform: rotate(90deg);
-    opacity: 1;
+    grid-template-columns: 20% auto;
+    grid-template-rows: 25% auto 15%;
 }
